<resources>
    <string name="app_name">VCricket</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">LogOut</string>
    <string name="message_log_out">Are You Sure to LogOut</string>
    <string name="action_user_profile">Profile</string>

    <string name="signIn_with_phone">SignIn With Phone</string>

    <string name="splash_bottom_details">VCricket is the Cricket Prediction App!!!!</string>


    <string name="menu_home">Home</string>
    <string name="menu_user_fund">UserFund</string>
    <string name="menu_my_contest">MyContests</string>
    <string name="menu_admin_account">AdminAccount</string>
    <string name="title_home">Home</string>
    <string name="title_account">My Account</string>
    <string name="title_payment">Payment</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in_phone">SignIn With Phone</string>
    <string name="no_contest_joined">No Contest Available</string>


    <string name="login_title">Login</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="sign_up_account">SignUp Account</string>
    <string name="sign_up">SignUp</string>
    <string name="sign_up_phone">SignUp With Phone</string>
    <string name="progress_bar_msg">Please Wait!!!</string>
    <string name="please_click_back_again_to_exit">Please Click back again to exit</string>
    <string name="signUp_toolbar_title">Create An Account</string>
    <string name="signUp_email">Email</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="signUP_male">Male</string>
    <string name="signUP_female">Female</string>
    <string name="user_mob">UserMob</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="signUp_title">SignUp</string>
    <string name="profile_title">User Profile</string>
    <string name="content_description">image</string>
    <string name="user_gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="balance">Balance</string>
    <string name="add_fund">Add Fund</string>
    <string name="enter_amount_to_add">Enter Amount To Add:</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="insufficient_balance_title">Insufficient Balance</string>
    <string name="insufficient_balance_message">Insufficient Balance Please Add Fund To Your Account</string>


    <string name="withdraw">Withdraw</string>
    <string name="enter_amount_to_withdraw">Enter Amount to WithDraw:</string>
    <string name="withdraw_fund">WithDraw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_contest_account">Add Contest</string>
    <string name="enter_bet_price_for_contest">Enter Bet Price : </string>
    <string name="submit_contest_list">Submit ContestList</string>
    <string name="enter_total_contest_seat">Enter Total Contest Seat</string>
    <string name="join_and_pay">Pay and Join</string>
    <string name="join_contest_pay">Join Contest</string>
    <string name="confirm_to_join_contest_title">Confirm To Join Contest</string>
    <string name="confirm_to_join_contest">Are You Sure to Join Contest. Contest Charge will be duducted</string>
    <string name="title_my_contest">MyContest</string>

</resources>