<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingStart="@dimen/primary_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/iv_drawer_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="40dp"
        android:background="@drawable/primary_outline_background"
        />

    <TextView
        android:id="@+id/tv_drawer_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_4_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_drawer_user_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading_4_size"
        android:textColor="@color/white"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>