<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.payment.WithDrawFundActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation"
        android:layout_gravity="center"
        android:layout_margin="@dimen/primary_card_layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_withdraw_fund_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_amount_to_withdraw"
                android:textStyle="bold"
                android:textSize="@dimen/heading_4_size"
                android:layout_marginBottom="@dimen/layout_margin_top"/>

            <EditText
                android:id="@+id/et_withdraw_fund_enter_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/primary_outline_background"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/primary_layout_margin"
                android:hint="@string/enter_amount"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_amount_withdraw_fund"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary_layout_margin"
                android:text="@string/withdraw_fund"
                android:textSize="@dimen/button_fund_text_size"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</layout>