<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.mainUi.LoginActivity"
    android:layout_margin="@dimen/primary_layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_login_header_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_frame_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/vcricketbackground"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="@dimen/login_frame_logo_width"
                android:layout_height="@dimen/login_frame_logo_height"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_notifications_24" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_login_header_image" />

        <LinearLayout
            android:id="@+id/ll_login_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/login_email"
                android:textColorHint="@color/light_primary_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/input_text_size"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/login_password"
                android:textColorHint="@color/light_primary_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text=""
                    android:padding="@dimen/text_padding"
                    android:textColor="@color/black"
                    android:textSize="@dimen/input_text_size"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="@string/sign_up_account"
                    android:textColor="@color/primary_blue"
                    android:textSize="17dp"
                    />
                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/sign_up"
                    android:textColor="@color/red"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    />


            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginHorizontal="@dimen/primary_layout_margin"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_login_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:text="@string/sign_in_phone"
                android:gravity="left"
                android:layout_margin="@dimen/primary_text_box_margin"/>

            <ImageView
                android:id="@+id/iv_login_with_phone"
                android:layout_width="0dp"
                android:layout_height="@dimen/sign_in_phone_image_size"
                android:layout_weight="1"
                android:onClick="loginWithPhone"
                android:src="@drawable/ic_baseline_local_phone_24"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

